--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -1,5 +1,10 @@
-.container {
-    align-self: auto;
-    height: 400px;
-    width: 75%;
+/* .container {
+    height: 100%;
+} */
+
+#map {
+    background-color: 'green';
+    /* height: '100vh'; */
+    width: '100px';
+    height: 100vh;
 }
