--- a/src/plugins/leaflet-sidebar/src/L.Control.Sidebar.css
+++ b/src/plugins/leaflet-sidebar/src/L.Control.Sidebar.css
@@ -39,6 +39,7 @@
     padding: 8px 24px;
     font-size: 1.1em;
     background: rgba(0, 0, 0, 0.25);
+    /* background: white; */
     box-shadow: 0 1px 7px rgba(0, 0, 0, 0.65);
     -webkit-border-radius: 4px;
     border-radius: 4px;
