--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -8,3 +8,28 @@
     width: '100px';
     height: 100vh;
 }
+
+.info {
+    text-align: center;
+    text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+    border-radius: 9px 9px 9px 9px;
+    -moz-border-radius: 9px 9px 9px 9px;
+    -webkit-border-radius: 9px 9px 9px 9px;
+    border: 0px solid #000000;
+    /* filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0); */
+    transition: 1s;
+    font-family: 'Kalam', cursive;
+    font-size: 25px;
+}
+
+.info:hover {
+    /* background: rgba(255, 255, 255, 1);
+    background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 0.72) 47%, rgba(237, 237, 237, 0.41) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(47%, rgba(246, 246, 246, 0.72)), color-stop(100%, rgba(237, 237, 237, 0.41)));
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 0.72) 47%, rgba(237, 237, 237, 0.41) 100%);
+    background: -o-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 0.72) 47%, rgba(237, 237, 237, 0.41) 100%);
+    background: -ms-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 0.72) 47%, rgba(237, 237, 237, 0.41) 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 0.72) 47%, rgba(237, 237, 237, 0.41) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0); */
+    transform: scale(1.2)
+}
