--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,24 @@
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-}
-
-.App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
-    color: white;
-}
-
-.App-title {
-    font-size: 1.5em;
-}
-
-.App-intro {
-    font-size: large;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+html,
+body {
+    margin: 0px;
+    height: 100%;
 }
 
 .container {
-    height: 400px;
+    height: 100vh;
     width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin: 0px;
+    border: 0px;
+    background: #373a47;
+    ;
+}
+
+.bm-menu-wrap,
+.bm-overlay {
+    top: 0;
+    left: 0;
 }
