--- a/src/plugins/leaflet-sidebar/src/L.Control.Sidebar.css
+++ b/src/plugins/leaflet-sidebar/src/L.Control.Sidebar.css
@@ -39,7 +39,6 @@
     padding: 8px 24px;
     font-size: 1.1em;
     background: rgba(0, 0, 0, 0.25);
-    /* background: white; */
     box-shadow: 0 1px 7px rgba(0, 0, 0, 0.65);
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -143,6 +142,24 @@
     top: 20px;
     width: 31px;
     height: 31px;
+    color: #e7040f;
+    font-size: 25px;
+    line-height: 1em;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.005);
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    cursor: pointer;
+    z-index: 1000;
+    transition: 0.5s;
+}
+
+.leaflet-sidebar .menu {
+    position: absolute;
+    right: 40px;
+    top: 100px;
+    width: 100%;
+    height: 70px;
     color: #e7040f;
     font-size: 25px;
     line-height: 1em;
