--- a/src/plugins/menu/style.css
+++ b/src/plugins/menu/style.css
@@ -12,9 +12,6 @@
     cursor: pointer;
     z-index: 100000;
     transition: 0.1s;
-    /* -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: -1px -1px 4px 4px rgba(0, 0, 0, 0.75); */
     border: 2px solid rgba(0, 0, 0, 0.2);
     background-clip: padding-box;
 }
@@ -37,4 +34,69 @@
 .leaflet-touch:hover .leaflet-bar :hover {
     transform: scale(1.3);
     background-color: #FFFFFF;
+}
+
+
+/* //#################################### */
+
+.leaflet-bar button,
+.leaflet-bar button:hover {
+    background-color: #fff;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 26px;
+    height: 26px;
+    line-height: 26px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    background-image: url(https://cdn2.iconfinder.com/data/icons/filled-icons/493/Search-512.png);
+    background-Size: 32px 32px;
+}
+
+.leaflet-bar button {
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: block;
+    background-image: url(https://cdn2.iconfinder.com/data/icons/filled-icons/493/Search-512.png);
+    background-Size: 32px 32px;
+}
+
+.leaflet-bar button:hover {
+    background-color: #f4f4f4;
+    background-image: url(https://cdn2.iconfinder.com/data/icons/filled-icons/493/Search-512.png);
+    background-Size: 32px 32px;
+}
+
+.leaflet-bar button:first-of-type {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.leaflet-bar button:last-of-type {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom: none;
+}
+
+.leaflet-bar.disabled,
+.leaflet-bar button.disabled {
+    cursor: default;
+    pointer-events: none;
+    opacity: .4;
+}
+
+.easy-button-button .button-state {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.leaflet-touch .leaflet-bar button {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
 }
