--- a/src/components/search/style.css
+++ b/src/components/search/style.css
@@ -2,37 +2,36 @@
     font-family: Helvetica, sans-serif;
 } */
 
-h1 {
+
+/* h1 {
     position: relative;
     font-family: 'Kalam', cursive;
-    /* top: -50px; */
-}
+} */
 
-h3 {
+
+/* h3 {
     position: relative;
     font-family: 'Kalam', cursive;
     font-size: 20px;
     color: #777;
-}
+} */
 
-.locationContainer {
+
+/* .locationContainer {
     padding: 0px;
-}
+} */
 
-hr {
-    color: red;
-}
 
-.title {
+/* .title {
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
     transition: 1s;
 }
 
 .title:hover {
     transform: scale(1.3)
-}
+} */
 
 .react-autosuggest__container {
     position: relative;
