--- a/src/components/search/style.css
+++ b/src/components/search/style.css
@@ -1,15 +1,33 @@
+.panelTitle{
+    background-color: #2E2E2E;
+    color: rgba(255,255,255,0.5);
+}
+.titleFieldSearch{
+    text-align: left;
+    padding: 0;
+    margin: 10px;
+}
+.locationContainer{
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
 .react-autosuggest__container {
     position: relative;
     width: 100%;
 }
 
+/* .react-autosuggest__container--open {
+    background-color: red;
+} */
+
 .react-autosuggest__input {
-    width: 100%;
-    height: 30px;
+    width: 70%;
+    height: 2em;
     padding: 10px 20px;
-    font-family: Helvetica, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
+    /* font-family: Helvetica, sans-serif; */
+    /* font-weight: 300; */
+    font-size: 13px;
     border: 1px solid #aaa;
     border-radius: 4px;
 }
@@ -28,20 +46,23 @@
 }
 
 .react-autosuggest__suggestions-container--open {
-    display: block;
+    /* display: block; */
     /* position: absolute; */
     top: 30px;
-    width: 100%;
+    width: 80%;
     border: 1px solid #aaa;
     background-color: #fff;
-    font-family: Helvetica, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    color: #2E2E2E;
+    /* font-family: Helvetica, sans-serif; */
+    /* font-weight: 300; */
+    font-size: 13px;
+    /* border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px; */
+    border-radius: 5px;
     max-height: 300px;
     overflow-y: auto;
     z-index: 2000;
+    display: inline-block;
 }
 
 .react-autosuggest__suggestions-list {
