--- a/src/plugins/leaflet-sidebar/src/L.Control.Sidebar.css
+++ b/src/plugins/leaflet-sidebar/src/L.Control.Sidebar.css
@@ -1,6 +1,7 @@
 .leaflet-sidebar {
     position: absolute;
     height: 100%;
+    max-width: 65vh;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -38,7 +39,7 @@
     box-sizing: border-box;
     padding: 8px 24px;
     font-size: 1.1em;
-    background: #373a47;
+    background: #2E2E2E;
     /* background: rgba(0, 0, 0, 0.25); */
     border-radius: 11px 11px 11px 11px;
     -moz-border-radius: 11px 11px 11px 11px;
