--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -6,7 +6,7 @@
         /* // background-color: 'green'; */
         /* height: '100vh'; */
         width: '100%';
-        height: 94vh;
+        height: 92.5vh;
         z-index: 0;
         /* width: '100px';
 height: 100vh; */
@@ -352,8 +352,12 @@ height: 100vh; */
     }
 
 .sk-cube-grid {
-    position: relative;
+    /* position: relative; */
+    position: absolute;
+    left: 45%;
+    top: 21%;
   width: 40px;
+  max-width: 40px;
   height: 40px;
   margin: 100px auto;
   z-index: 2000;
