--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -418,3 +418,10 @@ height: 100vh; */
             transform: scale3D(0, 0, 1);
   } 
 } 
+
+.test{
+    background-color: red;
+    height: 100px;
+    width: 200px;
+    position: absolute;
+}
